--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@expo/webpack-config": "^0.17.0",
     "expo": "^49.0.21",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
+    "react": "^18.2.0",
     "react-dom": "18.0.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
     "react-native-web": "~0.18.7",
     "tailwind-rn": "^4.2.0"
   },
